# pyhistmatchbot

./: Dockerfile  pyproject.toml
equalizator/: __init__.py  __main__.py  bot.py
