[tool.poetry]
name = "equalizator"
version = "0.1.0"
description = ""
authors = ["Yuri Vesnin <uvesnin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
numpy = "^2.0.0"
requests = "^2.32.3"
scikit-image = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
